# gstreamer-utils

./: .gitmodules  meson.build  submodules.txt
examples/: appsrcsink.cpp  change-resolution.cpp  dynamic-pipeline-switch.cpp  macros  seek.cpp  simple.cpp  util
src/: auto-gst-object.hpp  caps.cpp  caps.hpp  error.hpp  example.cpp  pipeline-helper.cpp  pipeline-helper.hpp  print-status.cpp  print-status.hpp
